<resources>
    <string name="app_name">Avian</string>
    <string name="enter_email">Enter your email address</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_name">Enter your name</string>
    <string name="confirm_password">Reenter the password</string>
    <string name="singup">Sign Up</string>
    <string name="profile_pic">Pick a profile picture</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="permission_required">Access permission is required</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="password_updated">Password changed successfully</string>
    <string name="generic_error">Something went wrong: %1$s</string>
    <string name="reset_password_instructions">Instructions to reset your password has been sent to %1$s</string>
    <string name="email_failed">Could not send email: %1$s</string>
    <string name="resend_timer">Retry after: %1$s</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="loading">Please wait...</string>
    <string name="no_internet">Check Internet Connection</string>
    <string name="chat">Chat</string>
    <string name="requests">Requests</string>
    <string name="find">Find</string>
    <string name="empty_chat_list">Conversations will appear here</string>
    <string name="empty_find_list">Registered users will appear here</string>
    <string name="empty_requests_list">Incoming requests will appear here</string>
    <string name="press_back_to_exit">Press back again to exit the application</string>
    <string name="send_request">Send Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="failed_to_fetch_users">Failed to fetch users: %1$s</string>
    <string name="request_sent_successfully">Request sent successfully</string>
    <string name="failed_to_send_request">Failed to send request: %1$s</string>
    <string name="request_cancelled_successfully">Request Cancelled Successfully</string>
    <string name="failed_to_cancel_request">Failed to cancel request: %1$s</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="failed_to_fetch_requests">Failed to fetch requests %1$s</string>
    <string name="failed_to_reject_request">Failed to reject request: %1$s</string>
    <string name="request_rejected">Request rejected successfully</string>
    <string name="accepted_request">Accepted request</string>
    <string name="failed_to_fetch_conversation_list">Failed to fetch conversation list: %1$s</string>
    <string name="enter_message">Enter Message</string>
    <string name="failed_to_send_message">Failed to send message: %1$s</string>
    <string name="message_sent_successfully">Message sent successfully</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="download_progress">Downloading %1$s (%2$s %%)</string>
    <string name="failed_to_upload">Failed to upload: %1$s</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="failed_to_delete_message">Failed to delete message: %1$s</string>
    <string name="message_deleted_successfully">Message deleted successfully</string>
    <string name="failed_to_delete_file">Failed to delete file: %1$s</string>
    <string name="failed_to_store_file">Failed to store file</string>
    <string name="file_downloaded_successfully">File downloaded successfully</string>
    <string name="view">View</string>
    <string name="failed_to_download">Failed to download file: %1$s</string>
    <string name="share_via">Share Via</string>
    <string name="failed_to_fetch_device_token">Failed to save device token: %1$s</string>
    <string name="notification_sent">Notification sent</string>
    <string name="failed_to_send_notification">Failed to send notification: %1$s</string>
    <string name="language_not_supported">Language not supported for smart replies</string>
</resources>